--- a/math/wingdingcardinality/index.html
+++ b/math/wingdingcardinality/index.html
@@ -68,31 +68,12 @@
    padding:20px;
 }
 
-.myButton {
-  -moz-box-shadow:inset 0px 1px 0px 0px #bee2f9;
-  -webkit-box-shadow:inset 0px 1px 0px 0px #bee2f9;
-  box-shadow:inset 0px 1px 0px 0px #bee2f9;
-  background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #63b8ee), color-stop(1, #468ccf));
-  background:-moz-linear-gradient(top, #63b8ee 5%, #468ccf 100%);
-  background:-webkit-linear-gradient(top, #63b8ee 5%, #468ccf 100%);
-  background:-o-linear-gradient(top, #63b8ee 5%, #468ccf 100%);
-  background:-ms-linear-gradient(top, #63b8ee 5%, #468ccf 100%);
-  background:linear-gradient(to bottom, #63b8ee 5%, #468ccf 100%);
-  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#63b8ee', endColorstr='#468ccf',GradientType=0);
-  background-color:#63b8ee;
-  -moz-border-radius:6px;
-  -webkit-border-radius:6px;
-  border-radius:6px;
-  border:1px solid #3866a3;
-  display:inline-block;
-  cursor:pointer;
-  color:#14396a;
-  font-family:Arial;
-  font-size:15px;
-  font-weight:bold;
-  padding:6px 24px;
-  text-decoration:none;
-  text-shadow:0px 1px 0px #7cacde;
+.soundbutton {
+    height: 60px;
+    width: 60px;
+    top: 10px;
+    position: relative;
+    margin-left: 10px;
 }
 .myButton:hover {
   background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #468ccf), color-stop(1, #63b8ee));
@@ -173,15 +154,17 @@ div.buttonrow {
 
 <script src="js/jquery-1.9.1.min.js"></script>
 <script>
-var soundOn = true;
+var soundOn = false;
 
 function toggleSound() {
     if (soundOn) {
         soundOn = false;
-        $("#soundToggle").prop('value', "Sound On");
+        $("#soundToggle").attr('alt', "Turn Sound On");
+        $("#soundToggle").attr('src', "img/soundoff.png");
     } else {
         soundOn = true;
-        $("#soundToggle").prop('value', "Sound Off");
+        $("#soundToggle").attr('alt', "Turn Sound Off");
+        $("#soundToggle").attr('src', "img/soundon.png");
     }
 }
 
@@ -217,6 +200,8 @@ var buildWingdingGrid = function() {
         numberRangeTop = Math.pow(numberRangeTop, 2);
     } else if ($('#incrementtype').val() == 'exponents') {
         numberRangeTop = Math.pow(2, numberRangeTop);
+    } else if ($('#incrementtype').val() == 'powersoften') {
+        numberRangeTop = Math.pow(10, numberRangeTop);
     }
 
     var wingding = $("#wingdings option:selected").text();
@@ -442,9 +427,10 @@ $(document).ready(function() {
         <div class="inline">
           <div class="form-title">Type:</div>
           <select id="incrementtype" class="form-field">
-            <option value="ones">Ones</option>
-            <option value="squares">Squares</option>
-            <option value="exponents">Exponents</option>
+            <option value="ones">1</option>
+            <option value="squares">n^2</option>
+            <option value="exponents">2^n</option>
+            <option value="powersoften">10^n</option>
           </select>
         </div>
         <div class="inline">
@@ -455,8 +441,11 @@ $(document).ready(function() {
           <div class="form-title">Break Rows:</div>
           <input class="form-field numbersmall" type="number" id="breakrowsby" value="0" />
         </div-->
-        <div class="buttonrow">
-          <input type="button" value="Sound Off" onclick="toggleSound();" class="myButton" id="soundToggle" />
+        <div class="inline">
+          <input type="image" src="img/soundoff.png" alt="Turn Sound On" onclick="toggleSound();return false;" class="soundbutton" id="soundToggle" />
+        </div>
+        <div class="displayvalue">
+            
         </div>
       </form>
     </div>
