--- a/index.html
+++ b/index.html
@@ -304,6 +304,12 @@
 
             <p><a href="math/puzzlearithmetic/"><img src="images/puzzlearithmetic.png" alt="Image of Puzzle-Piece Arithmetic" title="" /></a></p>
 
+            <h2><a href="math/numbertypes/">Number Types</a></h2>
+
+            <p>Generate products from random numbers and then try to categorize the products by type.</p>
+
+            <p><a href="math/numbertypes/"><img src="images/numbertypes.png" alt="Image of Number Types" title="" /></a></p>
+
             <h2><a href="math/fractalexplorer/">Fractal Explorer</a></h2>
 
             <p>For exploring binary trees, dragon curves, Mandelbrot, and Julia sets.</p>
